--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,9 @@
                 </div>
             </div>
         </nav>
+        <div class="container">
         {% block body %}{% endblock %}
+        </div>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
