--- a/src/LivrariaBundle/Resources/views/Default/index.html.twig
+++ b/src/LivrariaBundle/Resources/views/Default/index.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Minha Livraria{% endblock %}
+
 {% block body %}
 
-    
     <div class="container-fluid">
         <div class="row">
 
