--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
                                 <li><a href="{{ path('genero_index') }}">Lista de gêneros</a></li>
                             </ul>                            
                         </li>
-                        <li><a href="#">Caixa</a></li>
+                        <li><a href="{{ path('caixa') }}">Caixa</a></li>
                         <li><a href="#">Usuários</a></li>
                     </ul>
                     <form class="navbar-form navbar-right">
