--- a/src/LivrariaBundle/Resources/views/Genero/new.html.twig
+++ b/src/LivrariaBundle/Resources/views/Genero/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Novo Gênero</h1>
 
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'} }) }}
         {{ form_widget(form) }}
         <button class="btn btn-success pull-right" type="submit" value="Cadastrar">Cadastrar</button>
     {{ form_end(form) }}
