--- a/src/LivrariaBundle/Resources/views/Produtos/new.html.twig
+++ b/src/LivrariaBundle/Resources/views/Produtos/new.html.twig
@@ -4,7 +4,7 @@
 
         <h1>Novo Produto</h1>
       
-        {{ form_start(form) }}
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'} } ) }}
             {{ form_widget(form) }}
             <button class="btn btn-success pull-right" type="submit" value="Cadastrar">Cadastrar</button>
         {{ form_end(form) }}
