--- a/src/LivrariaBundle/Resources/views/Caixa/pdv.html.twig
+++ b/src/LivrariaBundle/Resources/views/Caixa/pdv.html.twig
@@ -8,26 +8,30 @@
         <div class="col-md-4">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <div class="input-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-barcode"></span>
-                        </span>
-                        <input class="form-control" type="text" />
-                        <span class="input-group-btn">
-                            <button type="button" class="btn btn-success">
-                                <span class="glyphicon glyphicon-ok"></span>
-                            </button>
-                        </span>
-                    </div>
-                    <div class="row">
-                        <div class="thumbnail">
-                            <img src="http://lorempixel.com/240/240">
-                            <div class="caption">
-                                <h3>Nome do Produto</h3>
-                                <p>Descrição do produto</p>
-                                <p>Preço Unitário: R$ 123,56<p>
-                            </div>
+                    <form id="form-produto" action="{{ path('pesquisar_produto') }}" method="POST">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-barcode"></span>
+                            </span>
+                            <input id="cod-produto" name="codigo" class="form-control" type="text" />
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-success">
+                                    <span class="glyphicon glyphicon-ok"></span>
+                                </button>
+                            </span>
                         </div>
+                    </form>    
+                    <hr />
+                    <div id="produto-detalhe" class="thumbnail hide">
+                        <img src="http://lorempixel.com/240/240">
+                        <div class="caption">
+                            <h3 id="produto-nome">Nome do Produto</h3>
+                            <p>Descrição do produto</p>
+                            <p>Preço Unitário: R$ 123,56<p>
+                        </div>
+                    </div>
+                    <div id="erro" class="alert alert-danger hide">
+                        Produto não Encontrado!
                     </div>
                 </div>
             </div>
@@ -37,21 +41,17 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">Carrinho de Compras</div>
                 <div class="panel-body">
-                    <ol>
-                        <li>Produto 1 - Qtde. 1 - valor R$ 123,45</li>
-                        <li>Produto 1 - Qtde. 1 - valor R$ 123,45</li>
-                        <li>Produto 1 - Qtde. 1 - valor R$ 123,45</li>
-                        <li>Produto 1 - Qtde. 1 - valor R$ 123,45</li>
+                    <ol id="lista-produtos">
+                        
                     </ol>
                 </div>
-                <div class="panel-footer">Total a pagar: R$ 0,00</div>
+                <div class="panel-footer">Total a pagar: R$ <span id="valor-total"></span></div>
             </div>
             <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-estorno">Estornar Ítem</button>
             <button type="button" class="btn btn-danger">Cancelar Venda</button>
             <button type="button" class="btn btn-success">Concluir Venda</button>
         </div>
     </div>
-
     <div id="modal-estorno" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
@@ -63,11 +63,60 @@
                     <div class="form-group">
                         <label>Informe o número do ítem:</label>
                         <input type="text" class="form-control" />
-                            <button class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-                            <button class="btn btn-success">Confirmar</button>
+                        <button class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                        <button class="btn btn-success">Confirmar</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript">
+        $(document).ready(function(){
+            
+            listagemProdutos();
+            
+            $('#form-produto').submit(function(evento){
+                evento.preventDefault();
+                
+                var valores = {
+                    "codigo": $('#cod-produto').val()
+                };
+                $.post('{{ path('pesquisar_produto') }}', valores, function(retorno){
+                    //console.log(retorno);
+                    
+                    if(retorno.status == 'ok')
+                    {
+                        $('#erro').addClass('hide');
+                        $('#produto-detalhe').removeClass('hide');
+                        
+                        listagemProdutos();
+                    }else {
+                        $('#erro').removeClass('hide');
+                        $('#produto-detalhe').addClass('hide');
+                    }
+                });
+            });
+        });
+        
+        function listagemProdutos()
+        {
+            $('#lista-produtos').empty();
+            
+            $.getJSON("{{ path('listagem') }}", function(retorno){
+                //console.log(retorno);
+                
+                var total = 0;
+                
+                retorno.forEach(function(el, ind){
+                    var li = $('<li>'+el.codigo+' - '+ el.descricao+' - '+ el.valor +'</li>');
+                    $('#lista-produtos').append(li);
+                    total += parseFloat(el.valor);
+                });
+                $('#valor-total').html(total.toFixed(2));
+            });
+        }
+    </script>
 {% endblock %}
