inicio de autenticação

--- a/src/LivrariaBundle/Resources/views/Caixa/pdv.html.twig
+++ b/src/LivrariaBundle/Resources/views/Caixa/pdv.html.twig
@@ -48,8 +48,8 @@
                 <div class="panel-footer">Total a pagar: R$ <span id="valor-total"></span></div>
             </div>
             <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-estorno">Estornar Ítem</button>
-            <button type="button" class="btn btn-danger">Cancelar Venda</button>
-            <button type="button" class="btn btn-success">Concluir Venda</button>
+            <a href="{{ path('cancelar') }}" id="bt-cancelar" type="button" class="btn btn-danger">Cancelar Venda</a>
+            <a href="{{ path('concluir') }}" type="button" class="btn btn-success">Concluir Venda</a>
         </div>
     </div>
     <div id="modal-estorno" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
@@ -62,9 +62,9 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label>Informe o número do ítem:</label>
-                        <input type="text" class="form-control" />
+                        <input id="item-estorno" type="text" class="form-control" />
                         <button class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-                        <button class="btn btn-success">Confirmar</button>
+                        <button id="bt-confirmar-estorno" class="btn btn-success">Confirmar</button>
                     </div>
                 </div>
             </div>
@@ -99,6 +99,12 @@
                     }
                 });
             });
+            
+            $('#bt-confirmar-estorno').click(function(){
+                var numItem = $('#item-estorno').val();
+                
+                location.href = "/caixa/estorno/"+numItem;
+            });
         });
         
         function listagemProdutos()
@@ -111,7 +117,7 @@
                 var total = 0;
                 
                 retorno.forEach(function(el, ind){
-                    var li = $('<li>'+el.codigo+' - '+ el.descricao+' - '+ el.valor +'</li>');
+                    var li = $('<li>'+el.codigo+' - '+ el.descricao+' R$ '+ el.valor +'</li>');
                     $('#lista-produtos').append(li);
                     total += parseFloat(el.valor);
                 });
