--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,8 +24,9 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
+                        {% if(is_granted('ROLE_ADMIN')) %}
                         <li><a href="{{ path('painel') }}">Painel</a></li>
-
+                        {% endif %}    
                         <li>
                             <a id="menu-produtos" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Produtos<span class="caret"></span></a>
                             <ul class="dropdown-menu" aria-labelledby="menu-produtos">
@@ -34,7 +35,7 @@
                             </ul>                            
                         </li>
                         <li><a href="{{ path('caixa') }}">Caixa</a></li>
-                        <li><a href="#">Usuários</a></li>
+                        <li><a href="{{ logout_path() }}">{{ app.user.nome }}</a></li>
                     </ul>
                     <form class="navbar-form navbar-right">
                         <input type="text" class="form-control" placeholder="Search...">
